use groovy lists as argument
Signed-off-by: Sven Marquardt <dev@mail.smarquardt.space>